# WePledge

./: .gitignore  .gitmodules  README.md  clean.sh  clean_migrations.sh  docker-compose.yml  sample.env
backend/: .devcontainer.json  .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
backend/assets/: requirements.txt
backend/docs/: README.md  debugging.md  documentation.md  documentation_graphql.md  documentation_graphql_users.md  graphql_add_data_queries.md  graphql_data_requests.md  graphql_errors.md  graphql_user_requests.md
backend/docs/data/: overall_emissions.md
backend/docs/graphdoc/: archiveaccount.doc.html  boolean.doc.html  businesstripaggregated.doc.html  businesstripinput.doc.html  businesstriptransportationmode.doc.html  businesstriptype.doc.html  commutingaggregated.doc.html  commutinginput.doc.html  commutingtransportationmode.doc.html  commutingtype.doc.html  createbusinesstrip.doc.html  createcommuting.doc.html  createelectricity.doc.html  createheating.doc.html  createworkinggroup.doc.html  createworkinggroupinput.doc.html  date.doc.html  datetime.doc.html  deleteaccount.doc.html  directive.spec.html  directivelocation.spec.html  electricityaggregated.doc.html  electricityfueltype.doc.html  electricityinput.doc.html  electricitytype.doc.html  enumvalue.spec.html  expectederrortype.doc.html  field.spec.html  float.doc.html  genericscalar.doc.html  heatingaggregated.doc.html  heatingfueltype.doc.html  heatinginput.doc.html  heatingtype.doc.html  id.doc.html  (+41 more)
backend/src/: entryPoint.sh  manage.py  pytest.ini
(+309 files in other folders)
